shalinee | TEST | correct alignemnt of inventory advance search

--- a/apps/web-giddh/src/app/inventory/components/stock-report-component/inventory.stockreport.component.scss
+++ b/apps/web-giddh/src/app/inventory/components/stock-report-component/inventory.stockreport.component.scss
@@ -313,9 +313,6 @@ button.btn.btn-filter {
 .stock-not-found {
     text-transform: none;
 }
-.wrap-head-report{
-    align-items: center;
-}
 .head-report{
     font-size: 20px;
     font-weight: bold;
